[package]
name = "abwab"
version = "0.1.0"
edition = "2021"

[dependencies]
egui-video = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.133"
tao = "0.30.8"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
wry = "0.47.2"
